--- a/LawnMowers.Logic/packages.config
+++ b/LawnMowers.Logic/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="coveralls.io" version="1.3.4" targetFramework="net45" />
+  <package id="coveralls.net" version="0.7.0" targetFramework="net45" developmentDependency="true" />
   <package id="OpenCover" version="4.6.519" targetFramework="net45" />
   <package id="ReportGenerator" version="2.4.5.0" targetFramework="net45" />
 </packages>
